# RobloxExternal-macOS

./: CMakeLists.txt  README.md
App-Injector/src/: InjectorLayer.cpp  InjectorLayer.h
App-Injector/src/roblox/: game.hpp
Common/: esp_controller.hpp  esp_types.hpp
Injector/src/: games.hpp  main.cpp
Injector/src/dumper/: dumper.hpp
Injector/src/games/: game_profile.hpp  generic.hpp  murderers_vs_sheriffs.hpp  murderers_vs_sheriffs_duels.hpp  phantom_forces.hpp
Injector/src/process/: process.hpp
Injector/src/roblox/: classes.hpp  game.hpp  instance.hpp  offsets.hpp  string.hpp
libESPManager/src/: esp_manager.cpp  objc_shims.h  objc_shims.mm
